# PAD

./: CMakeLists.txt  Readme.txt  load-env.sh
ex01/: CMakeLists.txt  reduction_ex.cpp  transform_ex.cpp
ex01/build-debug/: CMakeCache.txt
ex03/: CMakeLists.txt  reduction_ex.cpp  transform_ex.cpp
ex04/: CMakeLists.txt  ex04.cpp  reduction.cpp  transform.cpp
ex04/include/: allocator_adaptor.hpp  ex04.hpp
ex05/: CMakeLists.txt  launch.sh  reduction.cpp  reductionV2.cpp  reductionV3.cpp  transform.cpp  transformV2.cpp  transformV3.cpp
ex05/include/: allocator_adaptor.hpp  arena.hpp
